submit edition 0.0.1 for testing

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,18 +3,19 @@
     "pages/index/index",
     "pages/about/about",
     "pages/logs/logs",
-    "pages/science/science"
+    "pages/science/science",
+    "pages/疫苗/狐狸/狐狸"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "北大猫咪图鉴",
+    "navigationBarTitleText": "华师猫咪图鉴",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
   "sitemapLocation": "sitemap.json",
   "tabBar": {
-    "selectedColor":"#94070a",
+    "selectedColor": "#94070a",
     "color": "#888888",
     "list": [
       {
@@ -31,5 +32,4 @@
       }
     ]
   }
-
 }
